trying to fix top trending articles wrap

--- a/m2/s1/g5/assets/css/style.css
+++ b/m2/s1/g5/assets/css/style.css
@@ -77,18 +77,16 @@ body{
     align-items: center;
 }
 
+
+
+.trending-articles-wrapper{
+    display: flex;
+    flex: wrap;
+}
+
 .top-trending-article{
     display: flex;
     column-gap: 3px;
-}
-
-.trending-position{
-    text-align: center;
-}
-
-#top-trending img{
-    border-radius: 100%;
-    vertical-align: middle;
 }
 
 .articles-content{
@@ -96,7 +94,12 @@ body{
     flex-direction: column;
     align-items: start;
     gap: 10px;
-
 }
+
+#top-trending img{
+    border-radius: 100%;
+    vertical-align: middle;
+}
+
 
 
